Add Pep Logo to header, fix syntax

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,54 +1,55 @@
-    <!-- Header -->
-    <header class="masthead bg-primary text-white text-center">
+<!-- Header -->
+<header class="masthead bg-primary text-white text-center">
+  <!-- Webseiten-Logo -->
+  <!-- Kombination aus fa-black-tie, Schriftzug und TU-Logo -->
+  <div class="jumbotron jumbotron-fluid physikon-jumbotron mb-5">
 
-            <!-- Webseiten-Logo -->
-            <!-- Kombination aus fa-black-tie, Schriftzug und TU-Logo -->
-            <div class="jumbotron jumbotron-fluid physikon-jumbotron mb-5">
+    <!-- Stack two Font Awesome Icons -->
+    <h1 class="h1-header" href="/index">
+    <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -0.5em">
+      <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-yellow); transform: scale(1.5)"></i>
+      <i class="fab fab fa-black-tie fa-stack-2x" style="color: white"></i>
+    </span>
+    <span class="gray">Physi</span><span class="yellow">Kon</span><span class="gray">2019</span>
+    </h1>
+    <h2 class="gray">11. April 2019</h2>
 
-            <!-- Stack two Font Awesome Icons -->
-                <h1 class="h1-header" href="/index">
-                <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -0.5em">
-                    <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-yellow); transform: scale(1.5)"></i>
-                    <i class="fab fab fa-black-tie fa-stack-2x" style="color: white"></i>
-               </span>
-                    <span style="color: var(--pep-gray)">Physi</span><span style="color: var(--pep-yellow)">Kon <span style="color: var(--pep-gray)">2019</span>
-                </h1>
-            <!--TU & Fakultät Physik Logo -->
-            <div class="text-center ml-5">
-                <div class="logo">
-            <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white"></div>
-                <div class="logo">
-            <img class="mb-4" src="img/logo_fakultaet.svg" alt="" style="width: 80%; background-color: white"></div>
-            </div>
-            </div>
-
-
-
-        <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
-        <hr class="star-light">
-
-
-
-    <div class="container">
-        <div class="row">
-            <div class="col lg-2">
-
-            <h2 class="font-weight-light mb-0"><p>Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob? </p></h2>
-
-            </div>
-
-            <div class="col lg-2">
-
-            <h2 class="font-weight-light mb-0"><p>Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?</p></h2>
-
-         </div>
-        </div>
-    </div>
-
-        <h2 class="mb-0" style="font-size: 2rem"><p>Dann komm vorbei! </p></h1>
-<!--
-        <h2 class="font-weight-light mb-0"><p>Unternehmen aus der Umgebung stellen sich vor und dich ein</p></h2> -->
-
-<!--         <h2 class="mb-0"><p>Am <span style="color: var(--pep-yellow)">11. April 2019</span> veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. </p></h2> -->
+    <!--TU & Fakultät Physik Logo -->
+    <div class="text-center m-3">
+      <div class="logo">
+        <img class="mb-4" src="img/pep.svg" alt="" style="width: 80%; background-color: white">
       </div>
-    </header>
+      <div class="logo">
+        <img class="mb-4" src="img/logo_fakultaet.svg" alt="" style="width: 80%; background-color: white">
+      </div>
+      <div class="logo">
+        <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white">
+      </div>
+    </div>
+  </div>
+
+  <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
+  <hr class="star-light">
+
+  <div class="container">
+    <div class="row">
+      <div class="col col-lg-6">
+        <p class="font-weight-light mb-1" style="font-size: 2rem">
+          Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
+        </p>
+      </div>
+
+      <div class="col col-lg-6">
+        <p class="font-weight-light mb-1" style="font-size: 2rem">
+          Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
+        </p>
+     </div>
+    </div>
+  </div>
+
+  <p style="font-size: 2rem">Dann komm vorbei!
+
+
+  <p style="font-size: 1.5rem">11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund.
+  </div>
+</header>
