--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,14 +33,14 @@
 
   <div class="container">
     <div class="row">
-      <div class="col col-lg-6">
-        <p class="font-weight-light mb-1" style="font-size: 2rem">
+      <div class="col-12 col-lg-6 mb-2">
+        <p class="font-weight-light" style="font-size: 2rem">
           Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
         </p>
       </div>
 
-      <div class="col col-lg-6">
-        <p class="font-weight-light mb-1" style="font-size: 2rem">
+      <div class="col-12 col-lg-6 mb-2">
+        <p class="font-weight-light" style="font-size: 2rem">
           Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
         </p>
      </div>
