copied from current website

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -50,6 +50,6 @@
   <p style="font-size: 2rem">Dann komm vorbei!
 
 
-  <p style="font-size: 1.5rem">11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund.
+  <p style="font-size: 1.5rem">Am 11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund.
   </div>
 </header>
