--- a/_includes/information.html
+++ b/_includes/information.html
@@ -5,7 +5,6 @@
 <!-- Information Header -->
 <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2>
 <hr class="star-light mb-5">
-
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
@@ -22,7 +21,7 @@
     </div>
   </div>
 
-
+  <p style="font-size: 1.5rem">Direkt an der S-Bahn Station (Dortmund Universität) gelegen, befindet sich der "Campus-Treff". Der großzügige und helle Konferenzsaal bietet genügend Fläche, um Ihr Unternehmen zu präsentieren und mit Besuchern ins Gespräch zu kommen.
 
 <!-- Anfahrt Header -->
 <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Anfahrt</h2>
