--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -5,7 +5,7 @@
 <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Organisation</h2>
 <hr class="star-dark mb-5">
 
-<p class="p-fontsize"> Organisiert wird die Physikon von PeP et. al., dem Alumniverein der Physik.</p>
+<p class="p-fontsize"> Organisiert wird die PhysiKon von PeP et. al., dem Alumniverein der Physik.</p>
 
 <p class="p-fontsize"> Eines der Hauptziele von PeP ist es, den Kontakt zwischen Alumni, Wirtschaft
 und Studierenden zu fördern und die PhysiKon ist die ideale Gelegenheit dazu.</p>
