--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,19 +12,19 @@
     </span>
     <span class="gray">Physi</span><span class="yellow">Kon</span><span class="gray">2019</span>
     </h1>
-    <h2 class="gray">11. April 2019</h2>
+    <h2 class="gray">11. April 2019 &ndash; TU Dortmund</h2>
 
     <!--TU & Fakultät Physik Logo -->
     <div class="text-center m-3">
-      <div class="logo">
+      <!-- <div class="logo">
         <img class="mb-4" src="img/pep.svg" alt="" style="width: 80%; background-color: white">
-      </div>
-      <div class="logo">
+      </div> -->
+      <!-- <div class="logo">
         <img class="mb-4" src="img/logo_fakultaet.svg" alt="" style="width: 80%; background-color: white">
-      </div>
-      <div class="logo">
+      </div> -->
+      <!-- <div class="logo">
         <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white">
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -33,23 +33,46 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-12 col-lg-6 mb-2">
+      <div class="col-12 col-lg-4 mb-2">
         <p class="font-weight-light" style="font-size: 2rem">
           Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
         </p>
       </div>
 
-      <div class="col-12 col-lg-6 mb-2">
+      <div class="col-12 col-lg-4 mb-2">
         <p class="font-weight-light" style="font-size: 2rem">
           Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
         </p>
-     </div>
+      </div>
+
+      <div class="col-12 col-lg-4 mb-5">
+        <p class="font-weight-light" style="font-size: 2rem">
+          Du bist auf dem Weg Elektrotechniker/in, Informatiker/in, oder Ingenieur/in zu werden und interessierst dich für unsere Aussteller?
+        </p>
+      </div>
+        <!-- <p class="font-weight-light" style="font-size: 2rem">
+          Macht nichts, alle Unternehmen freuen sich über Messebesucher aus den Nachbar-Fakultäten!
+        </p> -->
+      </div>
+        <p class="font-weight-light mb-5" style="font-size: 3rem">
+          Dann komm vorbei!
+        </p>
+  </div>
+
+<!--
+  <p style="font-size: 2rem">Du bist auf dem Weg Elektrotechniker/in, Informatiker/in oder Ingenieur/in zu werden? </p>
+  <p style="font-size: 2rem">Macht nichts, alle Unternehmen freuen sich über Messebesucher aus den Nachbar-Fakultäten! </p> -->
+
+  <!--TU & Fakultät Physik Logo -->
+  <div class="row">
+    <div class="col-12 col-md-6">
+      <img src="img/logo_weiss.svg" alt="" style="width: 100%; max-width: 350px;">
+    </div>
+    <div class="col-12 col-md-6 mt-3">
+      <img src="img/tud_logo_negativ.svg" alt="" style="width: 100%; max-width: 350px;">
     </div>
   </div>
 
-  <p style="font-size: 2rem">Dann komm vorbei!
-
-
-  <p style="font-size: 1.5rem">Am 11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund.
+  <!-- <p style="font-size: 1.5rem">Am 11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. -->
   </div>
 </header>
