--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -1,9 +1,8 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize mb-0">Möchten Sie Physiker*innen für Ihr Unternehmen gewinnen?</h2>
-  <p class="p-fontsize">
-  
-  Die Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span> 2019 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und 
+  <h2 class="h2-fontsize  py-5">Sie möchten Physiker/innen für Ihr Unternehmen gewinnen?</h2>
+  <p style="font-size: 2rem">
+  Die Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span> 2019 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
   Absolventinnen der Physik attraktiv zu präsentieren.</p>
 </div>
 </header>
@@ -11,47 +10,48 @@
 <div class="container pt-5">
 
   <h3>Ihr Stand auf der Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span></h3>
-  <p>
+  <p style="font-size: 1.2rem">
   Für die Ausstellergebühr von 500€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket:</p>
 
-  <h5>Messestand</h5>  
-  <p>
-  Jedes Unternehmen erhält eine Ausstellungsfläche von 2,5 m x 2,5 m.
+  <h5>Messestand</h5>
+  <p style="font-size: 1.2rem">
+  Jedes Unternehmen erhält eine Ausstellungsfläche von ca. 2,5 m x 2,5 m.
   Auf Wunsch kann gerne ein Stehtisch oder auch ein Ablagetisch zur Verfügung
   gestellt werden. Für eine ausreichende Stromversorgung, sowie einen
   Internetzugang wird gesorgt. Größere Stellflächen sind aus organisatorischen
   Gründen nicht möglich.</p>
 
-  <h5>Messekatalog</h5>  
-  <p>
+  <h5>Messekatalog</h5>
+  <p style="font-size: 1.2rem">
   Zur PhysiKon wird ein Messekatalog erscheinen, der an die Besucherinnen und
   Besucher kostenlos verteilt wird. Im Katalog können Sie ihr Unternehmen auf
-  einer Seite darstellen, sowie auf einer weiteren Seite Stellenangebote
-  veröffentlichen.</p>
+  einer Seite vorstellen und Stellenangebote veröffentlichen.</p>
 
-  <h5>Präsentation</h5>  
-  <p>
+  <h5>Präsentation</h5>
+  <p style="font-size: 1.2rem">
   Den Absolventen und Studierenden sollen auf der PhysiKon nicht nur Unternehmen
   präsentiert werden, sondern auch die Berufsrealität näher gebracht werden.
-  Neben persönlichen Gesprächen mit den Besuchern bieten wir Ihnen daher auch die Möglichkeit 
+  Neben persönlichen Gesprächen mit den Besuchern bieten wir Ihnen daher auch die Möglichkeit
   ihr Unternehmen und Ihren Berufsalltag in einem kurzen Vortrag einem größeren Publikum vorzustellen. </p>
 
-  <h5>Stellenmarkt</h5> 
-  <p>
+  <h5>Stellenmarkt</h5>
+  <p style="font-size: 1.2rem">
   Auf dem Stellenmarkt können Sie offene Stellen, Praktika oder Traineeprogramme
   veröffentlichen. Bitte senden Sie uns diese Anzeigen rechtzeitig zu.</p>
 
   <h5>Catering</h5>
-  <p>
+  <p style="font-size: 1.2rem">
   Für das leibliche Wohl des Standpersonals wird von uns gesorgt.</p>
 
-  <h3>Kontakt</h3>
-  <p>
+  </div>
+
+  <div class="container pt-5">
+  <h3 class="mt-2">Kontakt</h3>
+  <p style="font-size: 1.2rem">
   Bei Interesse an der PhysiKon, melden Sie sich unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
   <br>
   Wir beantworten Ihnen gerne Ihre Fragen
-  und nehmen Ihre Anmeldung zur Messe gerne entgegen.</p>
+  und nehmen Ihre Anmeldung zur Messe entgegen.</p>
 
-</div>
-</div>
+
 </div>
