--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,7 +5,7 @@
   <title>Pep et al. e.V. PhysiKon</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Die Jobmesse für Physiker*innen an der TU Dortmund">
+  <meta name="description" content="Die Jobmesse für Physiker/innen an der TU Dortmund">
   <meta name="author" content="PeP et al. e.V.">
 
   <!-- CSS -->
