--- a/_includes/map.html
+++ b/_includes/map.html
@@ -1,16 +1,14 @@
-<!-- class map-iframe in custom.css -->
 <!-- OpenLayers -->
-
 
 <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/css/ol.css" type="text/css">
 <div id="map" class="map-iframe"></div>
+
 <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
-<!-- Skript -->
-
-
 <script type="text/javascript">
+  var campusTreff = ol.proj.fromLonLat([7.418560, 51.492407]);
+
   var map = new ol.Map({
-    interactions: ol.interaction.defaults({mouseWheelZoom:false}),
+    interactions: ol.interaction.defaults({mouseWheelZoom: false}),
     target: 'map',
     layers: [
       new ol.layer.Tile({
@@ -18,24 +16,39 @@
       })
     ],
     view: new ol.View({
-      center: ol.proj.fromLonLat([7.41721, 51.49290]),
-      zoom: 16
+      center: campusTreff,
+      zoom: 17,
     })
-     });
-    var marker = new ol.Feature({
-      geometry: new ol.geom.Point(
-        ol.proj.fromLonLat([7.41721, 51.49290])
-      ),  
-    });
+  });
 
-    var vectorSource = new ol.source.Vector({
-      features: [marker]
-    });
-    var markerVectorLayer = new ol.layer.Vector({
-      source: vectorSource,
-    });
-    map.addLayer(markerVectorLayer);
+  var marker = new ol.Feature(new ol.geom.Point(campusTreff));
+
+  var markerStyle = new ol.style.Style({
+    image: new ol.style.Icon({
+      anchor: [0.5, 1.0],
+      scale: 0.075,
+      anchorXUnits: 'fraction',
+      anchorYUnits: 'fraction',
+      src: 'img/location.svg',
+    }),
+    text: new ol.style.Text({
+      text: 'Campus Treff',
+      fill: new ol.style.Fill({color: '#7ac143'}),
+      stroke: new ol.style.Stroke({color: '#fff', width: 3}),
+      font: 'bold 1rem Fira Sans, sans-serif',
+      offsetY: 15,
+    }),
+  });
+
+  marker.setStyle(markerStyle);
+
+  var vectorSource = new ol.source.Vector({
+    features: [marker]
+  });
+
+  var markerVectorLayer = new ol.layer.Vector({
+    source: vectorSource,
+  });
+
+  map.addLayer(markerVectorLayer);
 </script>
-
-<!-- OpenLayers -->
-<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
