Logo fuer PhysiKon

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,26 +6,11 @@
 
     <!-- Stack two Font Awesome Icons -->
     <h1 class="h1-header" href="/index">
-    <span class="fa-stack fa-1x" style="transform: scale(0.8); margin-right: -0.5em">
-      <i class="fa fa-square-full fa-stack-1x light" style="color: var(--pep-yellow); transform: scale(1.5)"></i>
-      <i class="fab fab fa-black-tie fa-stack-2x" style="color: white"></i>
-    </span>
-    <span class="gray">Physi</span><span class="yellow">Kon</span><span class="gray">2019</span>
-    </h1>
+    <div class="logo">
+      <img class="mb-4 mx-auto" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="" style="height: 1em; background-color: white">
+    </div>    </h1>
     <h2 class="gray">11. April 2019 &ndash; TU Dortmund</h2>
 
-    <!--TU & Fakultät Physik Logo -->
-    <div class="text-center m-3">
-      <!-- <div class="logo">
-        <img class="mb-4" src="img/pep.svg" alt="" style="width: 80%; background-color: white">
-      </div> -->
-      <!-- <div class="logo">
-        <img class="mb-4" src="img/logo_fakultaet.svg" alt="" style="width: 80%; background-color: white">
-      </div> -->
-      <!-- <div class="logo">
-        <img class="mb-4" src="img/tu-dortmund-logo.svg" alt="" style="width: 80%; background-color: white">
-      </div> -->
-    </div>
   </div>
 
   <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
