--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -4,10 +4,7 @@
 
 
         <a class="navbar-brand js-scroll-trigger" href="/index">
-          <span class="fa-stack" style="transform: scale(1.0);">
-            <i class="fa fa-square-full fa-stack-1x" style="color: var(--pep-yellow); transform: scale(1.3)"></i>
-            <i class="fab fa-black-tie fa-stack-2x" style="color: var(--pep-gray)"></i>
-          </span>Physi<span style="color: var(--maincolor)">Kon</span>2019
+          <img class="mb-4" src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%; background-color: white">
         </a>
 
         <!-- Navbar (mobile) -->
