fixes to website

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -2,14 +2,14 @@
   <div class="container">
   <h2 class="h2-fontsize  py-5">Sie möchten Physiker/innen für Ihr Unternehmen gewinnen?</h2>
   <p style="font-size: 2rem">
-  Die Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span> 2019 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
+  Die PhysiKon 2019 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
   Absolventinnen der Physik attraktiv zu präsentieren.</p>
 </div>
 </header>
 
 <div class="container pt-5">
 
-  <h3>Ihr Stand auf der Physi<span style="color: var(--maincolor); font-weight: 600">Kon</span></h3>
+  <h3>Ihr Stand auf der PhysiKon</h3>
   <p style="font-size: 1.2rem">
   Für die Ausstellergebühr von 500€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket:</p>
 
