--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,7 +3,7 @@
       <div class="container">
 
 
-        <a class="navbar-brand js-scroll-trigger" href="/index">
+        <a class="navbar-brand js-scroll-trigger" href="/index.html">
           <img class="mb-4" src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%; background-color: white">
         </a>
 
