Fix white margin

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,63 +1,45 @@
 <!-- Header -->
-<header class="masthead bg-primary text-white text-center">
-  <!-- Webseiten-Logo -->
-  <!-- Kombination aus fa-black-tie, Schriftzug und TU-Logo -->
-  <div class="jumbotron jumbotron-fluid physikon-jumbotron mb-5">
 
-    <!-- Stack two Font Awesome Icons -->
-    <h1 class="h1-header" href="/index">
-    <div class="logo">
-      <img class="mb-4 mx-auto" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="" style="height: 1em; background-color: white">
-    </div>    </h1>
-    <h2 class="gray">11. April 2019 &ndash; TU Dortmund</h2>
+<div class="jumbotron jumbotron-fluid physikon-jumbotron mx-3 text-white text-center">
+  <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
+  <h2 class="gray">11. April 2019 &ndash; TU Dortmund</h2>
+</div>
 
-  </div>
-
+<header class="container-fluid masthead bg-primary text-white text-center pt-4">
   <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
   <hr class="star-light">
 
-  <div class="container">
-    <div class="row">
-      <div class="col-12 col-lg-4 mb-2">
-        <p class="font-weight-light" style="font-size: 2rem">
-          Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
-        </p>
-      </div>
+  <div class="row">
+    <div class="col-12 col-lg-4 mt-2">
+      <p class="font-weight-light" style="font-size: 2rem">
+        Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
+      </p>
+    </div>
 
-      <div class="col-12 col-lg-4 mb-2">
-        <p class="font-weight-light" style="font-size: 2rem">
-          Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
-        </p>
-      </div>
+    <div class="col-12 col-lg-4 mt-2">
+      <p class="font-weight-light" style="font-size: 2rem">
+        Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
+      </p>
+    </div>
 
-      <div class="col-12 col-lg-4 mb-5">
-        <p class="font-weight-light" style="font-size: 2rem">
-          Du bist auf dem Weg Elektrotechniker/in, Informatiker/in, oder Ingenieur/in zu werden und interessierst dich für unsere Aussteller?
-        </p>
-      </div>
-        <!-- <p class="font-weight-light" style="font-size: 2rem">
-          Macht nichts, alle Unternehmen freuen sich über Messebesucher aus den Nachbar-Fakultäten!
-        </p> -->
-      </div>
-        <p class="font-weight-light mb-5" style="font-size: 3rem">
-          Dann komm vorbei!
-        </p>
+    <div class="col-12 col-lg-4 mt-2">
+      <p class="font-weight-light" style="font-size: 2rem">
+        Du bist auf dem Weg Elektrotechniker/in, Informatiker/in, oder Ingenieur/in zu werden und interessierst dich für unsere Aussteller?
+      </p>
+    </div>
   </div>
 
-<!--
-  <p style="font-size: 2rem">Du bist auf dem Weg Elektrotechniker/in, Informatiker/in oder Ingenieur/in zu werden? </p>
-  <p style="font-size: 2rem">Macht nichts, alle Unternehmen freuen sich über Messebesucher aus den Nachbar-Fakultäten! </p> -->
+  <p class="font-weight-light mb-5" style="font-size: 3rem">
+    Dann komm vorbei!
+  </p>
 
-  <!--TU & Fakultät Physik Logo -->
+  <!--PeP & TU Logo -->
   <div class="row">
-    <div class="col-12 col-md-6">
+    <div class="col-12 col-lg-6 mt-3">
       <img src="img/logo_weiss.svg" alt="" style="width: 100%; max-width: 350px;">
     </div>
-    <div class="col-12 col-md-6 mt-3">
+    <div class="col-12 col-lg-6 mt-3">
       <img src="img/tud_logo_negativ.svg" alt="" style="width: 100%; max-width: 350px;">
     </div>
-  </div>
-
-  <!-- <p style="font-size: 1.5rem">Am 11. April 2019 veranstaltet PeP et al. die erste Jobmesse für Physiker/innen an der TU Dortmund. -->
   </div>
 </header>
