Fix fontsizes for mobile view

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -9,7 +9,7 @@
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
 
   <!-- Carousel Innner -->
-  <div class="carousel-inner" style="height: 350px !important; border-top:50px green !important">
+  <div class="carousel-inner" style="height: 350px !important; ">
 
   <!-- Carousel Indicators -->
    <ol class="carousel-indicators">
