--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,35 +1,35 @@
 <!-- Header -->
 
-<div class="jumbotron jumbotron-fluid physikon-jumbotron mx-3 text-white text-center">
+<div class="jumbotron jumbotron-fluid physikon-jumbotron px-3 text-white text-center">
   <img class="header-logo" src="img/logos-physikon/logo-pfeil-gruen.svg" alt="PhysiKon">
-  <h2 class="gray">11. April 2019 &ndash; TU Dortmund</h2>
+  <h2 class="gray">11. April 2019 &ndash; TU&nbsp;Dortmund</h2>
 </div>
 
 <header class="container-fluid masthead bg-primary text-white text-center pt-4">
-  <h1 class="mb-0">Jobmesse für Physikstudierende</h1>
+  <h1>Jobmesse für Physikstudierende</h1>
   <hr class="star-light">
 
   <div class="row">
     <div class="col-12 col-lg-4 mt-2">
-      <p class="font-weight-light" style="font-size: 2rem">
+      <p class="font-weight-light">
         Du bist auf der Suche nach einem Job nach dem Studium, einem Praktikum oder Werkstudentenjob?
       </p>
     </div>
 
     <div class="col-12 col-lg-4 mt-2">
-      <p class="font-weight-light" style="font-size: 2rem">
+      <p class="font-weight-light">
         Oder du möchtest dich einfach mal informieren, was du mit einem Physik-Studium alles anfangen kannst?
       </p>
     </div>
 
     <div class="col-12 col-lg-4 mt-2">
-      <p class="font-weight-light" style="font-size: 2rem">
+      <p class="font-weight-light">
         Du bist auf dem Weg Elektrotechniker/in, Informatiker/in, oder Ingenieur/in zu werden und interessierst dich für unsere Aussteller?
       </p>
     </div>
   </div>
 
-  <p class="font-weight-light mb-5" style="font-size: 3rem">
+  <p class="font-weight-light mb-5" style="font-size: 2rem">
     Dann komm vorbei!
   </p>
 
