--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -22,12 +22,11 @@ h6 {
 hr.star-light,
 hr.star-dark {
   max-width: 75%;
-  padding-bottom: 45px;
   text-align: center;
   border: none;
   border-top: solid 0.21rem;
-  margin-top: 2.5rem;
-  margin-bottom: 5.5rem;
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
   margin-left: auto;
   margin-right: auto;
 }
@@ -37,7 +36,8 @@ hr.star-dark:after {
   position: relative;
   top: -.8em;
   display: inline-block;
-  padding: 0 0.55em;
+  padding-top: 0;
+  padding-bottom: 0.5em;
   /*padding-bottom: 150px;*/
   /*content: '\f508';*/
   /*font-family: "Font Awesome 5 Free";*/
@@ -186,11 +186,11 @@ section h2 {
 header.masthead {
   padding-top: 0pt;
   padding-bottom: 4rem;
+  font-size: 1.0rem;
 }
 
 header.masthead h1 {
-  font-size: 3rem;
-  line-height: 3rem;
+  font-size: 1.75rem;
 }
 
 header.masthead h2 {
