--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -7,56 +7,41 @@
 
 <!-- Carousel -->
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
 
-  <!-- Carousel Innner -->
-  <div class="carousel-inner" style="height: 350px !important; ">
-
-  <!-- Carousel Indicators -->
-   <ol class="carousel-indicators">
     {% for unternehmen in include.data %}
-    {% if forloop.first == true %}
-    <li data-target="#{{ include.name }}" data-slide-to="0" class="active"></li>
-
-    {% else %}
-    <li data-target="#{{ include.name }}" data-slide-to="{{ forloop.index0 }}"></li>
-    {% endif %}
-    {% endfor %}
-  </ol>
-
-  <!-- Carousel items -->
-  <!-- Active item -->
-    {% for unternehmen in include.data %}
-    {% if forloop.first == true %}
-    <div class="carousel-item active">
+    <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
       <a href="{{ unternehmen.url }}" target="_blank">
-      <img class="carousel-img-new" src="{{ unternehmen.logo }}" alt="{{ unternehmen.title }}">
-         <div class="carousel-caption-new">
-        <h5>{{ unternehmen.title }}</h5>
-        <p>{{ unternehmen.caption }}</p>
-        </div></a>
-    </div>
-    {% else %}
-    <div class="carousel-item">
-      <a href="{{ unternehmen.url }}" target="_blank">
-      <img class="carousel-img-new" src="{{ unternehmen.logo }}" alt="{{ unternehmen.title }}">
+        <div class="frame">
+          <img class="carousel-img-new" src="{{ unternehmen.logo }}" alt="{{ unternehmen.title }}"/>
+        </div>
+
         <div class="carousel-caption-new">
-        <h5>{{ unternehmen.title }}</h5>
-        <p>{{ unternehmen.caption }}</p>
-        </div></a>
+          <h5>{{ unternehmen.title }}</h5>
+          <p>{{ unternehmen.caption }}</p>
+        </div>
+      </a>
     </div>
-    {% endif %}
     {% endfor %}
+
+    <ol class="carousel-indicators">
+      {% for unternehmen in include.data %}
+      <li
+        data-target="#{{ include.name }}"
+        data-slide-to="{{ forloop.index0 }}"
+        class="{% if forloop.first == true %}active{% endif %}">
+      </li>
+      {% endfor %}
+    </ol>
   </div>
 
-  <!-- Right/Left Navigators -->
   <a class="carousel-control-prev" href="#{{ include.name }}" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="carousel-control-prev-icon fas fa-angle-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
   <a class="carousel-control-next" href="#{{ include.name }}" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="carousel-control-next-icon fas fa-angle-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
 </div>
 </section>
