--- a/css/custom.css
+++ b/css/custom.css
@@ -282,5 +282,12 @@ a {
 }
 
 .logo {
-  display: inline-block;
+  position: absolute;
+	margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  max-width: 100%;
+  max-height: 100%;
 }
