Simplify hr with logo

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -3,7 +3,7 @@
 
 <!-- Carousel Header -->
 <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Unternehmen</h2>
-<hr class="star-dark mb-5">
+<hr class="star-dark">
 
 <!-- Carousel -->
 <div id="{{ include.name }}" class="carousel slide" data-ride="carousel">
