--- a/_includes/organisation.html
+++ b/_includes/organisation.html
@@ -3,7 +3,7 @@
 
 <!-- organisation Header -->
 <h2 class="text-center text-gray text-uppercase text-secondary mb-0 h2-fontsize">Organisation</h2>
-<hr class="star-dark mb-5">
+<hr class="star-dark">
 
 <p class="p-fontsize"> Organisiert wird die PhysiKon von PeP et. al., dem Alumniverein der Physik.</p>
 
