--- a/_includes/grid.html
+++ b/_includes/grid.html
@@ -5,7 +5,7 @@
 <section class="portfolio" id="portfolio">
 <div class="container mx-auto">
 
-<hr class="star-dark mb-5">
+<hr class="star-dark">
 
 <div class="row justify-content-center">
 {% for unternehmen in site.data.unternehmen %}
