--- a/_includes/information.html
+++ b/_includes/information.html
@@ -4,7 +4,7 @@
 
 <!-- Information Header -->
 <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2>
-<hr class="star-light mb-5">
+<hr class="star-light">
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
@@ -25,7 +25,7 @@
 
 <!-- Anfahrt Header -->
 <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Anfahrt</h2>
-<hr class="star-light mb-5">
+<hr class="star-light">
 
 {% include map.html %}
 
