--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -13,7 +13,7 @@
     <div class="carousel-item {% if forloop.first == true %}active{% endif %}">
       <a href="{{ unternehmen.url }}" target="_blank">
         <div class="frame">
-          <img class="carousel-img-new" src="{{ unternehmen.logo }}" alt="{{ unternehmen.title }}"/>
+          <img class="carousel-img-new" src="{{ unternehmen.logo }}" alt="{{ unternehmen.name }}"/>
         </div>
 
         <div class="carousel-caption-new">
