Finetune font size

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -175,7 +175,7 @@ section h2 {
 
 header.masthead {
   padding-top: 0pt;
-  padding-bottom: 4rem;
+  padding-bottom: 20px;
   font-size: 1.0rem;
 }
 
@@ -188,10 +188,15 @@ header.masthead h2 {
   font-family: 'Roboto';
 }
 
+@media (min-width: 768px) {
+  header.masthead {
+    font-size: 1.3rem;
+  }
+}
+
 @media (min-width: 992px) {
   header.masthead {
-    padding-bottom: 4rem;
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
 
