Fix white border around logo

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,8 +3,8 @@
       <div class="container">
 
 
-        <a class="navbar-brand js-scroll-trigger" href="/index.html">
-          <img src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%; background-color: white">
+        <a class="navbar-brand js-scroll-trigger bg-secondary" href="/index.html">
+          <img src="img/logos-physikon/logo-pfeil-gruen-inverse.svg" alt="" style="width: 100%">
         </a>
 
         <!-- Navbar (mobile) -->
