--- a/css/custom.css
+++ b/css/custom.css
@@ -124,11 +124,13 @@ a {
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  min-height: 300px;
+  padding-bottom: 1rem;
 }
 
 .carousel-indicators {
-  position: relative;
-  margin-top: 3rem;
+  position: absolute;
+  bottom: 0px;
 }
 
 .carousel-indicators li {
