Make title fit tab size

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
 
   <!-- Title -->
-  <title>PhysiKon 2019 - PeP et. al. e.V.</title>
+  <title>PhysiKon19 - PeP et. al.</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Die Jobmesse für Physiker/innen an der TU Dortmund">
