--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -44,4 +44,7 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+<script type="text/javascript">
+  $('.carousel').bcSwipe({ threshold: 50 });
+</script>
 </section>
