Fix carousel swiping

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -4,5 +4,7 @@
 <script src="js/jqBootstrapValidation.js"></script>
 <script src="js/jqBootstrapValidation.min.js"></script>
 
-<!-- OpenStreetMaps -->
-<script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
+<!-- make carousels swipable on touch screens -->
+<script type="text/javascript">
+  $('.carousel').bcSwipe({ threshold: 50 });
+</script>
