--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,6 +15,8 @@
 
           <!-- Navbar Items-->
          <ul class="navbar-nav ml-auto">
+           <li class="nav-item mx-0 mx-lg-1">
+             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Katalog</a>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
           </ul>
