fixed headline size

--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -1,6 +1,5 @@
 <div class="container pt-5">
-
-  <h3>Messekatalog zur PhysiKon</h3>
+  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon</h2>
   <p style="font-size: 1.2rem">
   Hier kann der Messekatalog der PhysiKon heruntergeladen werden.</p>
 
