Formatierung etwas überarbeitet

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,11 +15,11 @@
 
           <!-- Navbar Items-->
          <ul class="navbar-nav ml-auto">
-           <li class="nav-item mx-0 mx-lg-1">
+           <li class="nav-item mx-1 mx-lg-1">
              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Katalog</a>
-             <li class="nav-item mx-0 mx-lg-1">
-                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Vorträge</a>
-            <li class="nav-item mx-0 mx-lg-1">
+             <li class="nav-item mx-1 mx-lg-1">
+                <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
+            <li class="nav-item mx-1 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
           </ul>
         </div>
