--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -1,6 +1,6 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize  py-5">Was machen Physiker/innen nach dem Studium?</h2>
+  <h2 class="h2-fontsize  py-5">Was machen Physiker und Physikerinnen nach dem Studium?</h2>
   <p style="font-size: 2rem">
   Unsere Aussteller werden diese Frage in kurzen Vorträgen beantworten!
   </p>
@@ -31,7 +31,7 @@
       <td>Ritzenhoefer GmbH</td>
     </tr>
   </table>
-  
+
   </p>
 
   <h5>Block 2: 13:30 - 14:45</h5>
@@ -73,7 +73,7 @@
       <td>wir:personalberater</td>
     </tr>
   </table>
-  
+
   </p>
 
 
