Programm mobile Version ein bisschen gefixt (#51)

--- a/_includes/vortraege.html
+++ b/_includes/vortraege.html
@@ -7,16 +7,16 @@
 </div>
 </header>
 
-<div class="container pt-5">
+<div class="container  pt-5 ml-120 pb-5 mt-5 mt-lg-0">
 
   <h3>Vortragsprogramm </h3>
 <p>  </p>
   <h5>Block 1: 10:30 - 11:30</h5>
   <p style="font-size: 1.2rem">
-        <table style="width:30%">
+        <table style="width:100%" >
     <tr>
-      <td>10:30 - 10:45</td>
-      <td>IAV GmbH</td>
+      <td>10:30 - 10:45   </td>
+      <td> IAV GmbH</td>
     </tr>
     <tr>
       <td>10:45 - 11:00</td>
@@ -36,7 +36,7 @@
 
   <h5>Block 2: 13:30 - 14:45</h5>
   <p style="font-size: 1.2rem">
-    <table style="width:35%">
+    <table style="width:100%">
     <tr>
       <td>13:30 - 13:45</td>
       <td>Warth & Klein AG</td>
@@ -63,7 +63,7 @@
 
   <h5>Block 3: 15:30 - 16:00</h5>
   <p style="font-size: 1.2rem">
-    <table style="width:25%">
+    <table style="width:100%">
     <tr>
       <td>15:30 - 15:45</td>
       <td>mitNORM</td>
