prepared for physikon 2020

--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -1,20 +1,21 @@
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon</h2>
+  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2020</h2>
   <p style="font-size: 1.2rem">
-  Hier kann der Messekatalog der PhysiKon heruntergeladen werden.</p>
+  Hier können der Messekatalog der diesjährigen PhysiKon, sowie alle bisherigen Messekataloge vergangener Jobmessen, heruntergeladen werden.</p>
+</div>
 
-  <a href="/img/Physikon_Katalog_online.pdf">
-    <img style="size: 100%" src="img/Physikon_Katalog_online_Titel.png" alt="">
-  </a>
-
-  </div>
-
-  <div class="container pt-5">
+<div class="container pt-5">
   <h3 class="mt-2">Kontakt</h3>
   <p style="font-size: 1.2rem">
   Bei Anmerkungen zum Katalog, melden Sie sich unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
   <br>
   Wir freuen uns auf Ihre Fragen und Anmerkungen.</p>
+</div>
 
-
+<div class="container pt-5">
+  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2019</h2>
+    <a href="/img/Physikon_Katalog_online.pdf">
+      <img style="size: 100%" src="img/Physikon_Katalog_online_Titel.png" alt="">
+    </a>
+    <p></p>
 </div>
