--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -16,9 +16,11 @@
           <!-- Navbar Items-->
          <ul class="navbar-nav ml-auto">
            <li class="nav-item mx-1 mx-lg-1">
-             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Katalog</a>
+             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="katalog.html">Katalog und Archiv</a>
+             <!--
              <li class="nav-item mx-1 mx-lg-1">
                 <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="vortraege.html">Programm</a>
+             -->
             <li class="nav-item mx-1 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="exhibitors.html">Für Unternehmen</a>
           </ul>
