changed Physikstudierende to MINT-Studierende and changed title of tab to PhysiKon20

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
 </div>
 
 <header class="container-fluid masthead bg-primary text-white text-center pt-4">
-  <h1>Jobmesse für Physikstudierende</h1>
+  <h1>Jobmesse für MINT-Studierende</h1>
   <hr class="star-light">
 
   <div class="row">
