add IAV and change Physiker to MINT-Leute

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -1,9 +1,9 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize  py-5">Sie möchten Physiker/innen für Ihr Unternehmen gewinnen?</h2>
+  <h2 class="h2-fontsize  py-5">Sie suchen schlaue Köpfe und motivierte Absolventen oder Studierende aus dem MINT-Bereich?</h2>
   <p style="font-size: 2rem">
   Die PhysiKon 2020 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
-  Absolventinnen der Physik attraktiv zu präsentieren.</p>
+  Absolventinnen aller MINT-Fakultäten der TU Dortmund attraktiv zu präsentieren.</p>
 </div>
 </header>
 
