--- a/_includes/information.html
+++ b/_includes/information.html
@@ -5,6 +5,8 @@
 <!-- Information Header -->
 <h2 class="text-center text-white text-uppercase mb-0 h2-fontsize">Informationen</h2>
 <hr class="star-light">
+<h2 class="text-danger">findet auf Grund der COVID-19-Pandemie nicht statt</h2>
+<br>
   <div class="row pb-5">
     <div class="col-sm">
       <h3><i class="fas fa-location-arrow"></i> Ort</h3>
