--- a/_includes/katalog.html
+++ b/_includes/katalog.html
@@ -1,5 +1,5 @@
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2020</h2>
+  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2021</h2>
   <p style="font-size: 1.2rem">
   Hier können der Messekatalog der diesjährigen PhysiKon, sowie alle bisherigen Messekataloge vergangener Jobmessen, heruntergeladen werden.</p>
 </div>
@@ -12,10 +12,16 @@
   Wir freuen uns auf Ihre Fragen und Anmerkungen.</p>
 </div>
 
+<!--
 <div class="container pt-5">
-  <h2 class="h2-fontsize  py-5">Messekatalog zur PhysiKon 2019</h2>
-    <a href="/img/Physikon_Katalog_online.pdf">
-      <img style="size: 100%" src="img/Physikon_Katalog_online_Titel.png" alt="">
-    </a>
-    <p></p>
+  <div class="col-5">
+    <h2 class="h2-fontsize  py-5">PhysiKon 2021</h2>
+      <a href="/img/Physikon_Katalog_online.pdf">
+        <img style="size: 100%" src="img/Physikon_Katalog_online_Titel.png" alt="">
+      </a>
+  </div>
 </div>
+-->
+
+
+<hr class="star-dark">
