--- a/_layouts/katalog_layout.html
+++ b/_layouts/katalog_layout.html
@@ -4,6 +4,8 @@
   <body>
     {% include navbar.html %}
     {% include katalog.html %}
+    {% include katalog_2020.html %}
+    {% include katalog_2019.html %}
     <!-- Scripts -->
     {% include scripts.html %}
   </body>
