add Ausstellerinfos, add EYP

--- a/_includes/exhibitors.html
+++ b/_includes/exhibitors.html
@@ -1,47 +1,56 @@
 <header class="masthead bg-primary text-white text-center">
   <div class="container">
-  <h2 class="h2-fontsize  py-5">Sie suchen schlaue Köpfe und motivierte Absolventen oder Studierende aus dem MINT-Bereich?</h2>
+  <h2 class="h2-fontsize  py-5">Sie suchen schlaue Köpfe und motivierte Absolvent*innen oder Studierende aus dem MINT-Bereich?</h2>
   <p style="font-size: 2rem">
-  Die PhysiKon 2020 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
+  Die PhysiKon 2021 bietet Ihnen die Gelegenheit, Ihr Unternehmen für Absolventen und
   Absolventinnen aller MINT-Fakultäten der TU Dortmund attraktiv zu präsentieren.</p>
 </div>
 </header>
 
 <div class="container pt-5">
 
-  <h3>Ihr Stand auf der PhysiKon</h3>
-  <p style="font-size: 1.2rem">
-  Für die Ausstellergebühr von 1.000€ bieten wir Ihnen das folgende Rundum-Sorglos-Paket:</p>
+  <h3>Ihre Unternehmenspräsentation bei der PhysiKon 2021</h3>
 
-  <h5>Messestand</h5>
+  <h5>Termin</h5>
   <p style="font-size: 1.2rem">
-  Jedes Unternehmen erhält eine Ausstellungsfläche von ca. 2,5 m x 2,5 m.
-  Auf Wunsch kann gerne ein Stehtisch oder auch ein Ablagetisch zur Verfügung
-  gestellt werden. Für eine ausreichende Stromversorgung, sowie einen
-  Internetzugang wird gesorgt. Größere Stellflächen sind aus organisatorischen
-  Gründen nicht möglich.</p>
+    Die PhysiKon findet 2021 wie so vieles online statt.
+    In der Woche vom 19.-23. April stellen sich jeden Tag von 16-18 Uhr zwei Unternehmen vor.
+    Wir werden dafür das Videokonferenzprogramm <b>Zoom</b> benutzen.
+    Um die technische Umsetzung kümmern wir uns, Sie müssen lediglich über einen Internet-Browser verfügen.
+    Die Zeiteinteilung für die einzelnen Tage wird Anfang 2021 erfolgen, wenn alle Ausstellerplätze vergeben sind.
+  </p>
+
+  <h5>Vortrag</h5>
+  <p style="font-size: 1.2rem">
+    Jedes Unternehmen hat eine Stunde Zeit sich den interessierten Studierenden vorzustellen.
+    Diese Stunde kann relativ frei gestaltet werden.
+    Wir stellen uns einen (kurzen) einleitenden Vortrag vor, der ein bisschen über Ihr Unternehmen und den klassischen Aufgabenbereich für MINT-Fachkräfte erzählt.
+    Es sollte ausreichend Zeit für Fragen eingeplant werden, da wir unseren Teilnehmer*innen die Möglichkeit geben möchten, mit Ihnen ins Gespräch zu kommen.
+    Zoom verfügt über eine Breakout-Room-Funktion, die Gespräche in kleineren Gruppen ermöglicht und gerne genutzt werden kann.
+  </p>
 
   <h5>Messekatalog</h5>
   <p style="font-size: 1.2rem">
-  Zur PhysiKon wird ein Messekatalog erscheinen, der an die Besucherinnen und
-  Besucher kostenlos verteilt wird. Im Katalog können Sie ihr Unternehmen auf
-  einer Seite vorstellen und Stellenangebote veröffentlichen.</p>
+    Zur PhysiKon wird ein Messekatalog erscheinen, der kostenlos online zur Verfügung gestellt wird. Im Katalog können Sie Ihr Unternehmen auf
+    einer Seite vorstellen und Ihre Kontaktinformationen angeben. Der Katalog wird während und nach der Veranstaltung auf unserer Webseite zur Verfügung stehen.
+  </p>
 
-  <h5>Präsentation</h5>
-  <p style="font-size: 1.2rem">
-  Den Absolventen und Studierenden sollen auf der PhysiKon nicht nur Unternehmen
-  präsentiert werden, sondern auch die Berufsrealität näher gebracht werden.
-  Neben persönlichen Gesprächen mit den Besuchern bieten wir Ihnen daher auch die Möglichkeit
-  ihr Unternehmen und Ihren Berufsalltag in einem kurzen Vortrag einem größeren Publikum vorzustellen. </p>
 
   <h5>Stellenmarkt</h5>
   <p style="font-size: 1.2rem">
-  Auf dem Stellenmarkt können Sie offene Stellen, Praktika oder Traineeprogramme
-  veröffentlichen. Bitte senden Sie uns diese Anzeigen rechtzeitig zu.</p>
+    In Kooperation mit der <b>Jobbörse</b> von PeP et al. bieten wir einen Stellenmarkt an, auf dem Sie gerne aktuelle offene Stellen, Praktika oder Traineeprogramme
+    veröffentlichen können. Bitte senden Sie dazu Ihre Anzeigen an <a href="mailto:jobboerse@pep-dortmund.org">physikon@pep-dortmund.org</a>.
+    Die Jobbörse ist auch vor und nach der PhysiKon 2021 erreichbar.
+  </p>
 
-  <h5>Catering</h5>
+  
+  <h5>Ausstellergebühr</h5>
   <p style="font-size: 1.2rem">
-  Für das leibliche Wohl des Standpersonals wird von uns gesorgt.</p>
+    Der Höhe des Ausstellerbeitrags für die PhysiKon 2021 können Sie selbst bestimmen.
+    Selbstverständich bekommen Sie über Ihren Beitrag eine Rechnung.
+    Alternativ können Sie auch an unseren gemeinnützigen Verein PeP et al. spenden und bekommen eine Spendenquittung.
+    Mit dem Geld, das wir mit der PhysiKon 2021 einnehmen, finanzieren wir Projekte und Stipendien für die Physikstudierenden der TU Dortmund.
+    Falls Sie sich über unsere Arbeit informieren möchten, besuchen Sie gerne die <a href="https://pep-dortmund.org/">Webseite von PeP et al.</a> 
 
   </div>
 
@@ -50,8 +59,7 @@
   <p style="font-size: 1.2rem">
   Bei Interesse an der PhysiKon, melden Sie sich unter <a href="mailto:physikon@pep-dortmund.org">physikon@pep-dortmund.org</a>.
   <br>
-  Wir beantworten Ihnen gerne Ihre Fragen
-  und nehmen Ihre Anmeldung zur Messe entgegen.</p>
+  Wir beantworten Ihnen gerne Ihre Fragen und nehmen Ihre Anmeldung zur Messe entgegen.</p>
 
 
 </div>
